# Aletheia

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  eval_questions.yaml
.github/workflows/: ci.yml  evals.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  schemas.py
backend/app/eval/: metrics.py  runner.py
backend/app/ingestion/: chunker.py  pipeline.py
backend/app/llm/: client.py
backend/app/retrieval/: embedder.py  hybrid.py  reranker.py
backend/app/routers/: evals.py  query.py
backend/migrations/: 001_init.sql
dashboard/: index.html  package.json  tsconfig.json
dashboard/src/: App.tsx  api.ts  styles.css
dashboard/src/views/: Comparison.tsx  Drilldown.tsx  Trends.tsx
scripts/: run_eval.py  seed_fastapi_docs.py
tests/: test_chunker.py  test_eval_metrics.py  test_retrieval.py
widget/: index.html  package.json  tsconfig.json  vite.config.ts
widget/src/: api.ts  main.ts  styles.ts  widget.ts
