[project]
name = "ragfast-backend"
version = "0.1.0"
description = "RAG over the FastAPI docs"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sse-starlette>=2.1",
  "httpx>=0.27",
  "psycopg[binary,pool]>=3.2",
  "pgvector>=0.3",
  "numpy>=2.1",
  "fastembed>=0.4",
  "beautifulsoup4>=4.12",
  "lxml>=5.3",
  "openai>=1.55",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
